--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.24.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
