--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.15.6",
     "vue": "^2.6.10",
+    "vue-puzzle-vcode": "^1.1.9",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
