--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "core-js": "^2.6.5",
     "crypto": "^1.0.1",
     "element-ui": "^2.15.6",
+    "es6-promise": "^4.2.8",
     "qs": "^6.10.1",
+    "vant": "^2.12.31",
     "vue": "^2.6.10",
     "vue-puzzle-vcode": "^1.1.9",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
