--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/cli-service": "^3.8.0",
     "tinymce": "^5.5.1",
     "tinymce-vue": "^1.0.0",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.10"
   }
 }
