--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "crypto": "^1.0.1",
     "element-ui": "^2.15.6",
     "es6-promise": "^4.2.8",
+    "image-conversion": "^2.1.1",
     "js-cookie": "^3.0.1",
     "less": "^4.1.2",
     "less-loader": "^6.2.0",
+    "lrz": "^4.9.41",
     "plugins": "^0.4.2",
     "qs": "^6.10.1",
     "vant": "^2.12.31",
